# serializer version: 1
# name: test_list_warns_about_long_awaiting_applications[JOB SEEKER - no warnings]
  '''
  <section aria-labelledby="results" id="job-applications-section">
      <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
          <h3 class="h4 mb-0" id="results">
              
                  3 <strong>résultats</strong>
              
          </h3>
          <div class="flex-column flex-md-row btn-group btn-group-sm btn-group-action">
              
          </div>
      </div>
      
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 30 mars 2023 par
          
              
                  <strong>Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
              
          
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <span>Entreprise d'insertion</span>
              <a class="h3 d-block text-decoration-none" href="/company/42/card">Hit pit</a>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex justify-content-end">
                          
                          
                              <a class="btn btn-outline-primary" href="/apply/11111111-1111-1111-1111-111111111111/jobseeker/details?back_url=/apply/job_seeker/list">
                                  Voir ma candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 18 mars 2023 par
          
              
                  <strong>Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
              
          
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <span>Entreprise d'insertion</span>
              <a class="h3 d-block text-decoration-none" href="/company/42/card">Hit pit</a>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 3 semaines.
                              </p>
                          
                          
                              <a class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/apply/22222222-2222-2222-2222-222222222222/jobseeker/details?back_url=/apply/job_seeker/list">
                                  Voir ma candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 16 février 2023 par
          
              
                  <strong>Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
              
          
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <span>Entreprise d'insertion</span>
              <a class="h3 d-block text-decoration-none" href="/company/42/card">Hit pit</a>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 8 semaines.
                              </p>
                          
                          
                              <a class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/apply/33333333-3333-3333-3333-333333333333/jobseeker/details?back_url=/apply/job_seeker/list">
                                  Voir ma candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
          
  
  
  
      
  </section>
  '''
# ---
# name: test_list_warns_about_long_awaiting_applications[PRESCRIBER - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results" id="job-applications-section">
      <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
          <h3 class="h4 mb-0" id="results">
              
                  3 <strong>résultats</strong>
              
          </h3>
          <div class="flex-column flex-md-row btn-group btn-group-sm btn-group-action">
              
          </div>
      </div>
      
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 30 mars 2023 par
          
              <strong>Vous</strong>
          
          
              chez
              <a class="btn-ico btn-link" href="/company/42/card?back_url=/apply/prescriber/list">
                  <i aria-hidden="true" class="ri-community-line font-weight-medium ri-sm me-1"></i>
                  <span>Hit pit</span>
              </a>
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>J… H…</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex justify-content-end">
                          
                          
                              <a aria-label="Gérer la candidature de J… H…" class="btn btn-outline-primary" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/11111111-1111-1111-1111-111111111111/prescriber/details?back_url=/apply/prescriber/list">
                                  Voir sa candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 18 mars 2023 par
          
              <strong>Vous</strong>
          
          
              chez
              <a class="btn-ico btn-link" href="/company/42/card?back_url=/apply/prescriber/list">
                  <i aria-hidden="true" class="ri-community-line font-weight-medium ri-sm me-1"></i>
                  <span>Hit pit</span>
              </a>
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>J… H…</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 3 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de J… H…" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/22222222-2222-2222-2222-222222222222/prescriber/details?back_url=/apply/prescriber/list">
                                  Voir sa candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 16 février 2023 par
          
              <strong>Vous</strong>
          
          
              chez
              <a class="btn-ico btn-link" href="/company/42/card?back_url=/apply/prescriber/list">
                  <i aria-hidden="true" class="ri-community-line font-weight-medium ri-sm me-1"></i>
                  <span>Hit pit</span>
              </a>
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>J… H…</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 8 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de J… H…" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/33333333-3333-3333-3333-333333333333/prescriber/details?back_url=/apply/prescriber/list">
                                  Voir sa candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
          
  
  
  
      
  </section>
  '''
# ---
# name: test_list_warns_about_long_awaiting_applications[SIAE - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results" id="job-applications-section">
      <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
          <h3 class="h4 mb-0" id="results">
              
                  3 <strong>résultats</strong>
              
          </h3>
          <div class="flex-column flex-md-row btn-group btn-group-sm btn-group-action">
              
          </div>
      </div>
      
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 30 mars 2023 par
          
              
                  <strong>Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
              
          
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>Jacques HENRY</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex justify-content-end">
                          
                          
                              <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-outline-primary" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/11111111-1111-1111-1111-111111111111/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                          
                      </div>
                  </div>
              </div>
              
                  
  
  <div class="card my-3 my-md-4 px-4 alert-dismissible-once d-none container rounded border-important bg-important-lightest" id="rdvi-promo">
      <div class="row">
          <div class="d-none d-md-block col-md-auto align-self-center">
              <img alt="" class="m-auto" height="90" loading="lazy" src="/static/img/logo_rdv_insertion.svg"/>
          </div>
          <div class="col-12 col-md p-0">
              <div class="card-header pt-4">
                  <span class="badge rounded-pill bg-important badge-xs">Nouveau service</span>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="alert" data-bs-target="#rdvi-promo" type="button">
                  </button>
              </div>
              <div class="card-body pb-4">
                  <h4>RDV-Insertion simplifie les rendez-vous avec vos candidats</h4>
                  <p>
                      Besoin d'un outil de prise de RDV par mail et/ou SMS avec gestion des rappels pour
                      augmenter le taux de présence de vos candidats aux entretiens individuels et
                      aux informations collectives ?
                  </p>
                  <a aria-label="Découvrir le service RDV-Insertion dans un nouvel onglet" class="btn btn-ico btn-link p-0" href="https://tally.so/r/nro2X2" rel="noopener" target="_blank">
                      <span>Je découvre</span>
                      <i class="ri-external-link-line ri-lg"></i>
                  </a>
              </div>
          </div>
      </div>
  </div>
  
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 18 mars 2023 par
          
              
                  <strong>Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
              
          
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>Jacques HENRY</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 3 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/22222222-2222-2222-2222-222222222222/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 16 février 2023 par
          
              
                  <strong>Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
              
          
          
      </p>
      <div><span class="badge rounded-pill text-nowrap badge-sm mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>Jacques HENRY</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 8 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/33333333-3333-3333-3333-333333333333/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                          
                      </div>
                  </div>
              </div>
              
          
          
  
  
  
      
  </section>
  '''
# ---
